<resources>
    <string name="app_name">FirebaseDemo</string>

    <string name="loading">Loading...</string>

    <string name="desc_firebase_lockup">Firebase logo and name</string>


    <string name="emailpassword_title_text">Email and Password</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_up">Sign Up</string>

    <string name="create_account">Create Account</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="auth_failed">Authentication failed</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %s</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>


    <string name="signed_out">Signed Out</string>
    <string name="disconnect">Disconnect</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="label_database_real_time">Database real time</string>

    <string name="google_title_text">Google Sign In</string>
    <string name="facebook_title_text">Facebook Login</string>
    <!--
    @link{https://developers.facebook.com/apps/1836465186564994/dashboard/}
    -->
    <string name="facebook_app_id">1836465186564994</string>

    <string name="menu_logout">Log out</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>

    <!--
    Title header fragment
    -->
    <string name="heading_recent">Recent</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>

    <!--START: Storage-->
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="camera_button_text">Upload</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="download">Download</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>

    <string name="success">Success</string>
    <string name="progress_auth">Signing In…</string>
    <!--END: Storage-->
</resources>
